# unicode-rbnf

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements_dev.txt  setup.py
script/: format  lint  run  setup
tests/: test_de.py  test_decimal_format.py  test_en.py  test_engine.py  test_es.py  test_fi.py  test_fr.py  test_ko.py  test_load_all.py  test_pl.py  test_ro.py  test_sl.py  test_zu.py
unicode_rbnf/: __init__.py  __main__.py  decimal_format.py  engine.py
unicode_rbnf/rbnf/: de.xml  ro.xml  sl.xml  zu.xml
